issue #1 prepared start of transmitter and receiver